Refactoring. Add posthog tracker.

--- a/static/result.html
+++ b/static/result.html
@@ -23,6 +23,8 @@
     <script defer type="module" src="/assets/utils.js"></script>
 
     <link rel="stylesheet" href="/assets/ascii.css" />
+
+    {{tracker}}
   </head>
 
   <body
