--- a/static/form.html
+++ b/static/form.html
@@ -19,6 +19,8 @@
 
     <script defer type="module" src="/assets/utils.js"></script>
     <link rel="stylesheet" href="/assets/ascii.css" />
+
+    {{tracker}}
   </head>
 
   <body
