Add line numeration.

--- a/static/result.html
+++ b/static/result.html
@@ -186,11 +186,11 @@
                 class="hidden"
                 aria-labelledby="accordion-collapse-heading-assembler"
               >
-                <pre
+                <div
                   id="assembler-code-text-element"
                   class="pb-4 rounded-lg overflow-x-auto"
                 >
-{{assembler_code}}</pre
+{{assembler_code}}</div
                 >
               </div>
             </div>
@@ -229,11 +229,11 @@
                 class="hidden"
                 aria-labelledby="accordion-collapse-heading-simulation-config"
               >
-                <pre
+                <div
                   id="simulation-config-text-element"
                   class="pb-4 rounded-lg overflow-x-auto"
                 >
-{{yaml_content}}</pre
+{{yaml_content}}</div
                 >
               </div>
             </div>
