Lint and update tests

--- a/static/result.html
+++ b/static/result.html
@@ -190,8 +190,8 @@
                   id="assembler-code-text-element"
                   class="pb-4 rounded-lg overflow-x-auto"
                 >
-{{assembler_code}}</div
-                >
+                  {{assembler_code}}
+                </div>
               </div>
             </div>
           </div>
@@ -233,8 +233,8 @@
                   id="simulation-config-text-element"
                   class="pb-4 rounded-lg overflow-x-auto"
                 >
-{{yaml_content}}</div
-                >
+                  {{yaml_content}}
+                </div>
               </div>
             </div>
           </div>
@@ -275,7 +275,8 @@
             aria-labelledby="accordion-collapse-heading-simulation-log"
           >
             <div id="simulation-log-text-element" class="pb-4 overflow-x-auto">
-{{result}}</div>
+              {{result}}
+            </div>
           </div>
         </div>
         <div
@@ -319,7 +320,8 @@
               id="test-cases-result-text-element"
               class="pb-4 rounded-lg overflow-x-auto"
             >
-{{test_cases_result}}</div>
+              {{test_cases_result}}
+            </div>
           </div>
         </div>
         <div
@@ -351,7 +353,8 @@
             aria-labelledby="accordion-collapse-heading-dump"
           >
             <div id="dump-text-element" class="pb-4 rounded-lg overflow-x-auto">
-{{dump}}</div>
+              {{dump}}
+            </div>
           </div>
         </div>
         <div
