--- a/static/result.html
+++ b/static/result.html
@@ -35,7 +35,7 @@
         setupCopyButton,
         handleEmptyContent,
         setupThemeToggle,
-        getIsaFlag,
+        findIsaFlag,
         setupHideCommentsButton,
       } from '/assets/utils.js'
 
@@ -85,7 +85,7 @@
 
         setupThemeToggle('invert-theme-button')
 
-        const isa = getIsaFlag(
+        const isa = findIsaFlag(
           document.getElementById('status-text-element').textContent,
         )
 
